--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,21 @@ body {
   border-radius: 4px;
 }
 
+.nav-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--main-text-color);
+  cursor: pointer;
+  background: var(--background-color-main);
+  border-radius: 4px;
+  border: none;
+}
+
 .img {
   width: 370px;
   height: 294px;
@@ -123,7 +138,6 @@ body {
 }
 
 .specs-text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -169,14 +183,43 @@ body {
 }
 
 .team-occupation {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
+
+.team-img {
+  width: 270px;
+  height: 260px;
+}
 /* ================ END TEAM ================*/
+
+/* ================ EXAMPLES ================*/
+
+.nav-btn:hover,
+.nav-btn:focus {
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
+}
+
+.examples-img-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--main-text-color);
+}
+
+.examples-img-about {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.86;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+/* ================ END EXAMPLES ================*/
 
 /* ================ FOOTER ================*/
 
@@ -189,7 +232,6 @@ body {
 }
 
 .address {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -197,7 +239,6 @@ body {
 }
 
 .address-link {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -208,4 +249,5 @@ body {
 .address-link:focus {
   color: var(--accent-color);
 }
+
 /* ================ END FOOTER ================*/
