--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,7 @@ body {
 }
 
 .nav-btn {
-  font-weight: 500;
+  font-weight: inherit;
   font-size: 16px;
   line-height: 1.63;
   display: flex;
@@ -169,7 +169,6 @@ body {
 }
 
 .team-name {
-  font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
