styles do  not work

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,25 @@ body {
   letter-spacing: 0.03em;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+}
+
 .link {
   text-decoration: none;
 }
@@ -71,6 +90,15 @@ body {
 /* ================ END COMPONENTS ================*/
 
 /* ================ HEADER ================*/
+
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+}
 
 .nav-link {
   text-decoration: none;
