--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,6 +87,17 @@ img {
   color: var(--accent-color);
 }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 /* ================ END COMPONENTS ================*/
 
 /* ================ HEADER ================*/
@@ -94,6 +105,7 @@ img {
 .header {
   display: flex;
   align-items: center;
+  flex-direction: row;
 }
 
 .menu {
@@ -146,6 +158,13 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--accent-text-color);
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* ================ END HERO ================*/
