--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ ol {
   margin: 0;
   padding: 0;
 }
+
 img {
   display: block;
 }
@@ -44,6 +45,13 @@ img {
 
 .list {
   list-style: none;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* ================ COMPONENTS ================*/
