--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,6 +115,8 @@ img {
   display: flex;
   align-items: center;
   flex-direction: row;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .menu {
