--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,11 @@ img {
   align-items: center;
 }
 
+.nav-item:not(:last-child) {
+  display: flex;
+  margin-right: 50px;
+}
+
 .nav-link {
   text-decoration: none;
   line-height: 1.17;
