--- a/styles/styles.css
+++ b/styles/styles.css
@@ -377,6 +377,7 @@ img {
 .examples-about-wrapper {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
+  border-top: none;
 }
 
 .examples-img-title {
