--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,7 @@ ol {
 
 img {
   display: block;
+  width: 100%;
 }
 
 .link {
@@ -91,6 +92,9 @@ img {
   background: var(--background-color-main);
   border-radius: 4px;
   border: none;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .img {
@@ -100,7 +104,25 @@ img {
 }
 
 .current.nav-link {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
   color: var(--accent-color);
+}
+
+.nav-link-wrapper {
+  display: block;
+}
+
+.current.nav-link::after {
+  content: "";
+  display: block;
+  width: 48px;
+  height: 4px;
+  border-radius: 2px;
+  margin-top: 28px;
+  background-color: var(--accent-color);
 }
 
 .visually-hidden {
@@ -144,6 +166,8 @@ img {
   height: 44px;
   border-radius: 50%;
   background-color: transparent;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
@@ -164,6 +188,8 @@ img {
   fill: var(--social-logo);
   width: 20px;
   height: 20px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ================ END COMPONENTS ================*/
@@ -212,7 +238,7 @@ img {
 }
 
 .nav-item {
-  display: inline-block;
+  display: flex;
 }
 
 .nav-item:not(:last-child) {
@@ -222,8 +248,9 @@ img {
 .nav-link {
   line-height: 1.17;
   padding-top: 25px;
-  padding-bottom: 25px;
   color: var(--main-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -255,6 +282,9 @@ img {
   padding-bottom: 25px;
   color: var(--secondary-text-color);
   flex-direction: row-reverse;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact-link:hover,
@@ -377,10 +407,28 @@ img {
 }
 
 .skills-list-item {
+  position: relative;
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
+
+.skill-title {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--accent-text-color);
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 /* ================ END SKILLS ================*/
 
 /* ================ TEAM ================*/
@@ -464,6 +512,9 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: var(--social-logo);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-logo:hover,
@@ -553,10 +604,15 @@ img {
   top: 0;
   left: 0;
   height: 100%;
-  padding: 24px 63px;
+  padding: 60px 24px;
   background-color: var(--accent-color);
   color: var(--accent-text-color);
-  overflow: scroll;
+  overflow: auto;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -564,6 +620,7 @@ img {
 .list-items:hover .overlay,
 .list-items:focus .overlay {
   transform: translateY(0%);
+  opacity: 0.9;
 }
 /* ================ END EXAMPLES ================*/
 
@@ -605,6 +662,8 @@ img {
 .address-link {
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -637,3 +696,49 @@ img {
   fill: var(--accent-text-color);
 }
 /* ================ END FOOTER ================*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    pointer-events 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: #ffffff;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: transparent;
+  cursor: pointer;
+}
+
+.modal-x {
+  width: 11px;
+  height: 11px;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
