--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,7 +94,8 @@ img {
   border: none;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .img {
@@ -109,10 +110,6 @@ img {
   align-items: center;
   flex-direction: column;
   color: var(--accent-color);
-}
-
-.nav-link-wrapper {
-  display: block;
 }
 
 .current.nav-link::after {
@@ -167,7 +164,8 @@ img {
   border-radius: 50%;
   background-color: transparent;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
@@ -188,8 +186,6 @@ img {
   fill: var(--social-logo);
   width: 20px;
   height: 20px;
-
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ================ END COMPONENTS ================*/
@@ -197,16 +193,20 @@ img {
 /* ================ HEADER ================*/
 
 .header {
-  width: 1600px;
   display: flex;
   align-items: center;
-  flex-direction: row;
-  margin: 0 auto;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-items: center;
 }
 
 .menu {
   display: flex;
+  justify-items: center;
   align-items: center;
 }
 
@@ -224,15 +224,6 @@ img {
   color: var(--logo-text-main);
 }
 
-.nav-wrapper {
-  display: block;
-}
-
-.contact-wrapper {
-  display: block;
-  margin-left: auto;
-}
-
 .nav-list {
   display: flex;
 }
@@ -247,7 +238,8 @@ img {
 
 .nav-link {
   line-height: 1.17;
-  padding-top: 25px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--main-text-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -259,8 +251,8 @@ img {
 }
 
 .header-contacts {
-  display: flex;
-  margin-left: 0 auto;
+  display: block;
+  margin-left: auto;
   align-items: center;
 }
 
@@ -278,10 +270,9 @@ img {
 .header-contact-link {
   display: flex;
   align-items: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--secondary-text-color);
-  flex-direction: row-reverse;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -413,22 +404,25 @@ img {
   margin-top: 30px;
 }
 
-.skill-title {
+.skill-title-wrapper {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   left: 0;
   bottom: 0;
-  display: block;
-  padding-top: 27px;
-  padding-bottom: 27px;
   width: 100%;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
+}
+
+.skill-title {
+  display: block;
   color: var(--accent-text-color);
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
 }
-
 /* ================ END SKILLS ================*/
 
 /* ================ TEAM ================*/
