--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,6 +214,8 @@ img {
 
 .logo {
   display: inline-block;
+  padding-bottom: 25px;
+  padding-top: 25px;
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
@@ -691,6 +693,37 @@ img {
 .footer .social-list-icon {
   fill: var(--accent-text-color);
 }
+
+.signup-from {
+  display: flex;
+}
+
+.signup-email {
+  display: block;
+  margin-right: 12px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)) */
+  background-color: transparent;
+}
+.btn-icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--accent-text-color);
+  margin-left: 10px;
+}
+
+.btn-title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
 /* ================ END FOOTER ================*/
 
 .backdrop {
@@ -716,6 +749,48 @@ img {
   background-color: #ffffff;
 }
 
+.modal-form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #2196f3;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border: var(--accent-color);
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-form-icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+}
 .modal-close-btn {
   position: absolute;
   top: 8px;
