--- a/styles/styles.css
+++ b/styles/styles.css
@@ -555,7 +555,6 @@ img {
   color: var(--accent-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 .examples-img-list {
@@ -694,20 +693,49 @@ img {
   fill: var(--accent-text-color);
 }
 
-.signup-from {
+/* .signup-from {
   display: flex;
-}
+  align-items: center;
+  justify-content: center;
+} */
 
 .signup-email {
-  display: block;
   margin-right: 12px;
+  padding-left: 16px;
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)) */
+  color: var(--accent-text-color);
   background-color: transparent;
 }
+
+.signup-email::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-btn-wrapper {
+  display: flex;
+}
+
+.footer-modal-btn {
+  min-width: 200px;
+  margin: 0 auto;
+  padding: 10px 32px;
+  justify-content: center;
+  color: var(--accent-text-color);
+  background: var(--accent-color);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
+
 .btn-icon {
   width: 24px;
   height: 24px;
@@ -715,15 +743,6 @@ img {
   margin-left: 10px;
 }
 
-.btn-title {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-}
 /* ================ END FOOTER ================*/
 
 .backdrop {
@@ -743,17 +762,35 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
   background-color: #ffffff;
 }
 
+.form-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--main-text-color);
+}
+
 .modal-form {
   position: relative;
   display: flex;
   flex-direction: column;
-  padding: 40px;
+}
+.modal-form-field {
+  position: relative;
+  margin-bottom: 10px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
 }
 
 .modal-form-input {
@@ -763,34 +800,120 @@ img {
   box-sizing: border-box;
   border-radius: 4px;
   padding-left: 42px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus {
   outline: none;
-  border: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
 }
 
 .modal-form-input-wrapper {
   position: relative;
   display: block;
+  margin-bottom: 10px;
+  margin-top: 4px;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  width: 12px;
+  height: 12px;
+  fill: var(--logo-text-main);
 }
 
 .modal-form-input:focus + .modal-form-icon {
   fill: var(--accent-color);
 }
 
-.modal-form-icon {
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal-form-message {
   width: 100%;
   height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-form-message:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+.modal-form-message::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-check-desc::before {
+  display: inline-block;
+  content: "";
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #000000;
+  border-radius: 2px;
+  cursor: pointer;
+  outline: none;
+}
+
+.modal-form-check-desc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--secondary-text-color);
+}
+
+.modal-form-agreement:checked + .modal-form-check-desc::before {
+  background-image: url("../images/checked.svg");
+  background-repeat: no-repeat;
+  background-color: var(--accent-color);
+  background-position: center;
+  border: 1px solid var(--accent-color);
+}
+
+.modal-form-agreement:focus + .modal-form-check-desc::before {
+  box-shadow: 0 0 0 1px var(--accent-color);
+}
+
+.modal-form-btn {
+  min-width: 200px;
+  margin: 0 auto;
+  padding: 10px 32px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  letter-spacing: 0.06em;
+  color: var(--accent-text-color);
+  cursor: pointer;
+  background: var(--accent-color);
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+}
+
 .modal-close-btn {
   position: absolute;
   top: 8px;
@@ -806,6 +929,11 @@ img {
 .modal-x {
   width: 11px;
   height: 11px;
+}
+
+.modal-close-btn:focus,
+.modal-close-btn:hover {
+  fill: var(--accent-color);
 }
 
 .is-hidden {
