--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,6 @@ img {
   min-width: 200px;
   padding: 10px 32px;
   align-self: center;
-  margin-bottom: 40px;
   color: var(--accent-text-color);
   background: var(--accent-color);
   border-radius: 4px;
@@ -248,6 +247,7 @@ img {
   .social-list__footer {
     display: inline-block;
     margin-left: 70px;
+    margin-bottom: 0;
   }
 }
 
@@ -335,7 +335,6 @@ img {
   padding: 40px;
   transform: translate(-50%, -50%);
   width: 90vw;
-  height: 609px;
   background-color: #ffffff;
 }
 
@@ -378,7 +377,8 @@ img {
 
 @media screen and (min-width: 480px) {
   .modal {
-    width: 450px;
+    width: 460px;
+    height: 609px;
   }
 }
 
@@ -467,12 +467,9 @@ img {
 }
 
 .modal-form-check-desc {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   color: var(--secondary-text-color);
 }
 
@@ -504,25 +501,12 @@ img {
   color: var(--accent-color);
 }
 
-.modal-form-btn {
-  min-width: 200px;
-  padding: 10px 32px;
-  align-self: center;
-  margin-bottom: 40px;
-  color: var(--accent-text-color);
-  background: var(--accent-color);
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-}
-
-.modal-form-btn:hover, .modal-form-btn:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  cursor: pointer;
+@media screen and (min-width: 1200px) {
+  .modal-form-check-desc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .nav-list {
@@ -639,13 +623,16 @@ img {
 .mobile-menu {
   position: fixed;
   top: 0;
-  right: 0;
   width: 100vw;
   max-width: 480px;
   height: 100vh;
   padding: 48px 40px;
   z-index: 1;
+  overflow-y: scroll;
   background-color: var(--accent-text-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   visibility: hidden;
   pointer-events: none;
   transform: translateX(100%);
@@ -664,7 +651,7 @@ img {
 .mobile-menu__item {
   margin-bottom: 32px;
   font-size: 40px;
-  line-height: 1.17;
+  line-height: 1.18;
   letter-spacing: 0.02em;
 }
 
@@ -674,11 +661,17 @@ img {
   pointer-events: auto;
 }
 
+.current.mobile-menu__link {
+  position: relative;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  color: var(--accent-color);
+}
+
 .mobile-menu-close-btn,
 .burger-btn {
   display: block;
-  width: 40px;
-  height: 40px;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -719,12 +712,14 @@ img {
 
 .mobile-social-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: left;
   margin-left: -10px;
 }
 
 .mobile-social-list__item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-bottom: 10px;
 }
 
 .mobile-social-list__link {
@@ -809,6 +804,7 @@ img {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/studio/hero-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .hero-title {
@@ -1047,8 +1043,7 @@ img {
 .clients-list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  margin-right: -30px;
+  justify-content: center;
   margin-bottom: -30px;
 }
 
@@ -1060,7 +1055,7 @@ img {
   flex-basis: calc(100% / 2 - 30px);
 }
 
-.clients-list__item:not(:last-child) {
+.clients-list__item:nth-child(2n + 1) {
   margin-right: 30px;
 }
 
@@ -1147,6 +1142,10 @@ img {
   font-size: 16px;
   line-height: 1.86;
   color: var(--secondary-text-color);
+}
+
+.examples-img-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
