--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -173,7 +173,6 @@ img {
   min-width: 200px;
   padding: 10px 32px;
   align-self: center;
-  margin-bottom: 40px;
   color: var(--accent-text-color);
   background: var(--accent-color);
   border-radius: 4px;
@@ -248,6 +247,7 @@ img {
   .social-list__footer {
     display: inline-block;
     margin-left: 70px;
+    margin-bottom: 0;
   }
 }
 
@@ -432,13 +432,16 @@ img {
 .mobile-menu {
   position: fixed;
   top: 0;
-  right: 0;
   width: 100vw;
   max-width: 480px;
   height: 100vh;
   padding: 48px 40px;
   z-index: 1;
+  overflow-y: scroll;
   background-color: var(--accent-text-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   visibility: hidden;
   pointer-events: none;
   transform: translateX(100%);
@@ -457,7 +460,7 @@ img {
 .mobile-menu__item {
   margin-bottom: 32px;
   font-size: 40px;
-  line-height: 1.17;
+  line-height: 1.18;
   letter-spacing: 0.02em;
 }
 
@@ -467,11 +470,17 @@ img {
   pointer-events: auto;
 }
 
+.current.mobile-menu__link {
+  position: relative;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  color: var(--accent-color);
+}
+
 .mobile-menu-close-btn,
 .burger-btn {
   display: block;
-  width: 40px;
-  height: 40px;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -512,12 +521,14 @@ img {
 
 .mobile-social-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: left;
   margin-left: -10px;
 }
 
 .mobile-social-list__item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-bottom: 10px;
 }
 
 .mobile-social-list__link {
@@ -642,6 +653,10 @@ img {
   font-size: 16px;
   line-height: 1.86;
   color: var(--secondary-text-color);
+}
+
+.examples-img-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
