--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -77,12 +77,9 @@
 }
 
 .modal-form-check-desc {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   color: var(--secondary-text-color);
 
   &::before {
@@ -114,27 +111,10 @@
   color: var(--accent-color);
 }
 
-.modal-form-btn {
-  min-width: 200px;
-  padding: 10px 32px;
-  align-self: center;
-  margin-bottom: 40px;
-
-  color: var(--accent-text-color);
-  background: var(--accent-color);
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-
-  &:hover,
-  &:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    cursor: pointer;
+@media screen and (min-width: 1200px) {
+  .modal-form-check-desc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
